--- a/doc/locale/fr/LC_MESSAGES/auto_examples/features/laser_beam.po
+++ b/doc/locale/fr/LC_MESSAGES/auto_examples/features/laser_beam.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-20 18:01+0200\n"
+"POT-Creation-Date: 2025-10-27 18:46+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -19,8 +19,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.17.0\n"
 
-msgid ":ref:`Go to the end <sphx_glr_download_auto_examples_laser_beam.py>` to download the full example code."
-msgstr ":ref:`Aller à la fin <sphx_glr_download_auto_examples_laser_beam.py>` pour télécharger le code complet de l'exemple."
+msgid ":ref:`Go to the end <sphx_glr_download_auto_examples_features_laser_beam.py>` to download the full example code."
+msgstr ":ref:`Aller à la fin <sphx_glr_download_auto_examples_features_laser_beam.py>` pour télécharger le code complet de l'exemple."
 
 msgid "Laser Beam Size Measurement Example"
 msgstr "Analyser la taille d'un faisceau laser"
@@ -47,7 +47,7 @@ msgid "Visualize the first few images"
 msgstr "Visualiser les premières images"
 
 msgid "Qt widget 1"
-msgstr "Widget Qt 1"
+msgstr ""
 
 msgid "Background noise analysis with histogram"
 msgstr "Analyser le bruit de fond avec un histogramme"
