Update convolution example title and localization for clarity

--- a/doc/locale/fr/LC_MESSAGES/auto_examples/features/convolution.po
+++ b/doc/locale/fr/LC_MESSAGES/auto_examples/features/convolution.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-24 21:29+0200\n"
+"POT-Creation-Date: 2025-10-27 19:05+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -22,8 +22,8 @@ msgstr ""
 msgid ":ref:`Go to the end <sphx_glr_download_auto_examples_features_convolution.py>` to download the full example code."
 msgstr ":ref:`Aller à la fin <sphx_glr_download_auto_examples_features_convolution.py>` pour télécharger le code complet de l'exemple."
 
-msgid "Convolution and Deconvolution with Sigima"
-msgstr "Convolution et Déconvolution avec Sigima"
+msgid "Image Blurring and Sharpening with Convolution"
+msgstr "Flou et accentuation de contours par convolution"
 
 msgid "This example demonstrates the image convolution and deconvolution features available in Sigima, showing various kernels and their effects on images. Each section builds upon the previous one to create a comprehensive understanding of convolution operations."
 msgstr "Cet exemple démontre les fonctionnalités de convolution et de déconvolution d'image disponibles dans Sigima, montrant divers noyaux et leurs effets sur les images. Chaque section s'appuie sur la précédente pour créer une compréhension complète des opérations de convolution."
