--- a/doc/locale/fr/LC_MESSAGES/auto_examples/index.po
+++ b/doc/locale/fr/LC_MESSAGES/auto_examples/index.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-27 18:46+0100\n"
+"POT-Creation-Date: 2025-10-28 09:29+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -19,11 +19,11 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.17.0\n"
 
-msgid "Gallery of examples"
-msgstr "Galerie d'exemples"
+msgid "Examples"
+msgstr "Exemples"
 
-msgid "This section presents a gallery of examples demonstrating the capabilities of Sigima. Each example is a standalone Python script that showcases specific features or use cases of the Sigima library, along with visualizations of the results (using an internal plotting module `sigima.tests.vistools` based on `PlotPyStack <https://github.com/PlotPyStack>`_)."
-msgstr "Cette section présente une galerie d'exemples démontrant les capacités de Sigima. Chaque exemple est un script Python autonome qui met en valeur des fonctionnalités ou des cas d'utilisation spécifiques de la bibliothèque Sigima, ainsi que des visualisations des résultats (en utilisant un module de tracé interne `sigima.tests.vistools` basé sur `PlotPyStack <https://github.com/PlotPyStack>`_)."
+msgid "This section presents a collection of examples demonstrating the capabilities of Sigima. Each example is a standalone Python script that showcases specific features or use cases of the Sigima library, along with visualizations of the results (using an internal plotting module `sigima.tests.vistools` based on `PlotPyStack <https://github.com/PlotPyStack>`_)."
+msgstr "Cette section présente une collection d'exemples démontrant les capacités de Sigima. Chaque exemple est un script Python autonome qui met en valeur des fonctionnalités ou des cas d'utilisation spécifiques de la bibliothèque Sigima, ainsi que des visualisations des résultats (en utilisant un module de tracé interne `sigima.tests.vistools` basé sur `PlotPyStack <https://github.com/PlotPyStack>`_)."
 
 msgid "Of course, some of these examples may seem trivial, but they serve to illustrate how to use various functionalities of Sigima in a clear and concise manner."
 msgstr "Bien sûr, certains de ces exemples peuvent sembler triviaux, mais ils servent à illustrer comment utiliser diverses fonctionnalités de Sigima de manière claire et concise."
@@ -55,10 +55,10 @@ msgstr "Ce dossier contient des exemples qui démontrent des fonctionnalités sp
 msgid ":ref:`sphx_glr_auto_examples_features_blob_detection.py`"
 msgstr ""
 
-msgid ":ref:`sphx_glr_auto_examples_features_convolution.py`"
+msgid ":ref:`sphx_glr_auto_examples_features_fabry_perot.py`"
 msgstr ""
 
-msgid ":ref:`sphx_glr_auto_examples_features_fabry_perot.py`"
+msgid ":ref:`sphx_glr_auto_examples_features_convolution.py`"
 msgstr ""
 
 msgid ":ref:`sphx_glr_auto_examples_features_laser_beam.py`"
