--- a/doc/locale/fr/LC_MESSAGES/intro/overview.po
+++ b/doc/locale/fr/LC_MESSAGES/intro/overview.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-27 16:40+0100\n"
+"POT-Creation-Date: 2025-10-28 09:29+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -403,8 +403,8 @@ msgstr "Pour commencer à utiliser Sigima, consultez :"
 msgid ":doc:`installation` - Set up Sigima in your environment"
 msgstr ":doc:`installation` - Installez Sigima dans votre environnement"
 
-msgid ":doc:`features` - Explore Sigima's key features and capabilities"
-msgstr ":doc:`features` - Explorez les fonctionnalités et capacités clés de Sigima"
+msgid ":doc:`../features` - Explore Sigima's key features and capabilities"
+msgstr ":doc:`../features` - Explorez les principales fonctionnalités et capacités de Sigima"
 
 msgid ":doc:`../auto_examples/index` - Practical examples showing signals and images in action"
 msgstr ":doc:`../auto_examples/index` - Exemples pratiques montrant les signaux et images en action"
