--- a/doc/locale/fr/LC_MESSAGES/auto_examples/getting_started/index.po
+++ b/doc/locale/fr/LC_MESSAGES/auto_examples/getting_started/index.po
@@ -19,15 +19,12 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.17.0\n"
 
-msgid "Various Features"
+msgid "Getting Started"
 msgstr ""
 
-msgid ":ref:`sphx_glr_auto_examples_features_datalab_client.py`"
+msgid ":ref:`sphx_glr_auto_examples_getting_started_image_creation.py`"
 msgstr ""
 
-msgid ":ref:`sphx_glr_auto_examples_features_datetime_signals.py`"
-msgstr ""
-
-msgid ":ref:`sphx_glr_auto_examples_features_coordinate_systems.py`"
+msgid ":ref:`sphx_glr_auto_examples_getting_started_signal_creation.py`"
 msgstr ""
 
