--- a/doc/locale/fr/LC_MESSAGES/auto_examples/use_cases/index.po
+++ b/doc/locale/fr/LC_MESSAGES/auto_examples/use_cases/index.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-24 21:29+0200\n"
+"POT-Creation-Date: 2025-10-28 10:04+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -19,17 +19,21 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.17.0\n"
 
-msgid "Advanced Examples"
-msgstr "Exemples avancés"
-
-msgid "These examples show advanced features and integration capabilities of Sigima."
-msgstr "Ces exemples illustrent les fonctionnalités avancées et les capacités d'intégration de Sigima."
-
-msgid ":ref:`sphx_glr_auto_examples_advanced_datalab_client.py`"
+msgid "Use Cases"
 msgstr ""
 
-msgid ":ref:`sphx_glr_auto_examples_advanced_datetime_signals.py`"
+msgid ":ref:`sphx_glr_auto_examples_use_cases_blob_detection.py`"
 msgstr ""
 
-msgid ":ref:`sphx_glr_auto_examples_advanced_coordinate_systems.py`"
+msgid ":ref:`sphx_glr_auto_examples_use_cases_fabry_perot.py`"
 msgstr ""
+
+msgid ":ref:`sphx_glr_auto_examples_use_cases_convolution.py`"
+msgstr ""
+
+msgid ":ref:`sphx_glr_auto_examples_use_cases_laser_beam.py`"
+msgstr ""
+
+msgid ":ref:`sphx_glr_auto_examples_use_cases_paracetamol.py`"
+msgstr ""
+
