Update French translations and remove deprecated files

--- a/doc/locale/fr/LC_MESSAGES/auto_examples/features/convolution.po
+++ b/doc/locale/fr/LC_MESSAGES/auto_examples/features/convolution.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-27 19:05+0100\n"
+"POT-Creation-Date: 2025-10-28 10:18+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -22,11 +22,11 @@ msgstr ""
 msgid ":ref:`Go to the end <sphx_glr_download_auto_examples_features_convolution.py>` to download the full example code."
 msgstr ":ref:`Aller à la fin <sphx_glr_download_auto_examples_features_convolution.py>` pour télécharger le code complet de l'exemple."
 
-msgid "Image Blurring and Sharpening with Convolution"
-msgstr "Flou et accentuation de contours par convolution"
+msgid "Convolution and Deconvolution"
+msgstr "Convolution et déconvolution"
 
-msgid "This example demonstrates the image convolution and deconvolution features available in Sigima, showing various kernels and their effects on images. Each section builds upon the previous one to create a comprehensive understanding of convolution operations."
-msgstr "Cet exemple démontre les fonctionnalités de convolution et de déconvolution d'image disponibles dans Sigima, montrant divers noyaux et leurs effets sur les images. Chaque section s'appuie sur la précédente pour créer une compréhension complète des opérations de convolution."
+msgid "This example focuses on image blurring and sharpening using convolution and deconvolution techniques provided by Sigima. Using various kernels, we'll explore how these operations affect images and how to implement them using Sigima's processing functions."
+msgstr "Cet exemple se concentre sur le floutage et l'accentuation de contours d'images en utilisant les techniques de convolution et de déconvolution fournies par Sigima. En utilisant divers noyaux, nous explorerons comment ces opérations affectent les images et comment les implémenter en utilisant les fonctions de traitement de Sigima."
 
 msgid "The example shows:"
 msgstr "L'exemple montre :"
