--- a/doc/locale/fr/LC_MESSAGES/auto_examples/features/index.po
+++ b/doc/locale/fr/LC_MESSAGES/auto_examples/features/index.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-28 10:04+0100\n"
+"POT-Creation-Date: 2025-10-28 10:18+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -20,6 +20,9 @@ msgstr ""
 "Generated-By: Babel 2.17.0\n"
 
 msgid "Various Features"
+msgstr "Fonctionnalités diverses"
+
+msgid ":ref:`sphx_glr_auto_examples_features_convolution.py`"
 msgstr ""
 
 msgid ":ref:`sphx_glr_auto_examples_features_datalab_client.py`"
