--- a/doc/locale/fr/LC_MESSAGES/auto_examples/use_cases/index.po
+++ b/doc/locale/fr/LC_MESSAGES/auto_examples/use_cases/index.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-28 10:04+0100\n"
+"POT-Creation-Date: 2025-10-28 10:18+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -20,15 +20,12 @@ msgstr ""
 "Generated-By: Babel 2.17.0\n"
 
 msgid "Use Cases"
-msgstr ""
+msgstr "Cas d'usage"
 
 msgid ":ref:`sphx_glr_auto_examples_use_cases_blob_detection.py`"
 msgstr ""
 
 msgid ":ref:`sphx_glr_auto_examples_use_cases_fabry_perot.py`"
-msgstr ""
-
-msgid ":ref:`sphx_glr_auto_examples_use_cases_convolution.py`"
 msgstr ""
 
 msgid ":ref:`sphx_glr_auto_examples_use_cases_laser_beam.py`"
