--- a/doc/locale/fr/LC_MESSAGES/user_guide/features.po
+++ b/doc/locale/fr/LC_MESSAGES/user_guide/features.po
@@ -1327,7 +1327,5 @@ msgstr ":doc:`../api/proc` - Référence API complète pour toutes les fonctions
 msgid ":doc:`../api/objects` - Data objects (SignalObj, ImageObj) used by processing functions"
 msgstr ":doc:`../api/objects` - Objets de données (SignalObj, ImageObj) utilisés par les fonctions de traitement"
 
-#, fuzzy
 msgid ":doc:`../auto_examples/index` - Examples demonstrating various computation features"
-msgstr ":doc:`../intro/index` - Exemples illustrant diverses fonctionnalités de calcul"
-
+msgstr ":doc:`../auto_examples/index` - Exemples démontrant diverses fonctionnalités de calcul"
