Fix pulse features extraction with ROI signals
When extracting pulse features from signals with ROIs, the start/end
range parameters were incorrectly applied to ROI-extracted data,
causing wrong results. The ranges were specified for the full signal
(e.g., [5.0, 7.495] and [52.405, 54.9]) but were being used on ROI
segments (e.g., x from 12.0 to 15.3), leading to incorrect feature
detection.

--- a/doc/locale/fr/LC_MESSAGES/changelog.po
+++ b/doc/locale/fr/LC_MESSAGES/changelog.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-11-01 17:27+0100\n"
+"POT-Creation-Date: 2025-11-01 18:44+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -29,7 +29,10 @@ msgid "sigima 1.0.1"
 msgstr "sigima 1.0.1"
 
 msgid "🛠️ Bug fixes:"
-msgstr "🛠️ Corrections de bogues:"
+msgstr "🛠️ Correctifs:"
+
+msgid "Fixed pulse features extraction with ROI signals. When extracting pulse features from signals with ROIs, the start/end range parameters (which apply to the full signal) were being used on ROI-extracted data, causing incorrect results. Now `extract_pulse_features()` detects when the parameter ranges are outside the ROI's x-range and automatically switches to auto-detection mode. Additionally, `extract_pulse_features()` in `sigima.tools.signal.pulse` now properly initializes `None` ranges using `get_start_range()` and `get_end_range()` with the `fraction` parameter. This ensures pulse features extracted from a signal with ROIs match the features extracted from individually extracted ROI signals."
+msgstr "Correction de l'extraction des caractéristiques des impulsions avec des signaux ROI. Lors de l'extraction des caractéristiques des impulsions à partir de signaux avec des ROI, les paramètres de plage de début/fin (qui s'appliquent au signal complet) étaient utilisés sur les données extraites des ROI, ce qui entraînait des résultats incorrects. Désormais, `extract_pulse_features()` détecte lorsque les plages de paramètres sont en dehors de la plage x de la ROI et passe automatiquement en mode de détection automatique. De plus, `extract_pulse_features()` dans `sigima.tools.signal.pulse` initialise désormais correctement les plages `None` en utilisant `get_start_range()` et `get_end_range()` avec le paramètre `fraction`. Cela garantit que les caractéristiques des impulsions extraites d'un signal avec des ROI correspondent aux caractéristiques extraites des signaux ROI extraits individuellement."
 
 msgid "Fixed ROI extraction for signals: ROIs are no longer incorrectly copied to destination signals when extracting ROIs. When using `extract_roi()` or `extract_rois()`, the extracted signals now have no ROI defined, which is the expected behavior since the extracted data already represents the ROI itself. This fixes the issue where extracted signals would inherit the source signal's ROI definitions."
 msgstr "Correction de l'extraction des ROI pour les signaux : les ROI ne sont plus copiées vers les signaux de destination lors de l'extraction des ROI. Lors de l'utilisation de `extract_roi()` ou `extract_rois()`, les signaux extraits n'ont désormais aucune ROI définie, ce qui est le comportement attendu puisque les données extraites représentent déjà la ROI elle-même. Cela corrige le problème où les signaux extraits hériterait des définitions de ROI du signal source."
